# magnetic-sand-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/leungjch/physicsfractals/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leungjch/physicsfractals/: DataClasses.kt  GameThread.kt  GameView.kt  MainActivity.kt  RustGreetings.java  RustUniverse.java  Utils.kt
app/src/main/res/layout/: activity_main.xml  modal_bottom_sheet.xml  options_dialog.xml  settings_dialog.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/leungjch/physicsfractals/: ExampleUnitTest.kt
cargo/: Cargo.toml  README.md  cargo-config.toml
cargo/src/: android.rs  lib.rs
gradle/wrapper/: gradle-wrapper.properties
