[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
log-panics = "2.1.0"
log = "0.4.6"
android_logger = { version = "0.11.1", default-features = false }
rayon = { version = "1.5", optional = true }
rand = "0.8.4"